--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,10 +2,11 @@
 <% if current_user %>
   Logged in as <%= current_user.email %>.
   <%= link_to "Log Out", logout_path %>
+  <% if current_user.superadmin_role? %>
+    <p>Visible only for admins </p>
+  <% end %>
 <% else %>
   <%= link_to "Sign Up", signup_path %> or
   <%= link_to "Log In", login_path %>
 <% end %>
 <p id="notice"><%= notice %></p>
-<h1>logged</h1>
-<p>in</p>
